# hello-numerical-world-2021-11-15-sc

./: README.md  args.C  heat.C  makefile  tests.mk
cmake_step1/: CMakeLists.txt  args.C  build.sh
cmake_step1/include/: heat.H
cmake_step2/: CMakeLists.txt  build.sh  makefile
cmake_step2/include/: version.H.in
cmake_step2/tests/: CMakeLists.txt  testDriver.sh
tdd-example/: CMakeLists.txt  README.md  check.sh  heat.C
workflows/: check.yml
